style.css
/* ... */
/* selecting every direct descendent so that this can be used on other components */
.underline-indicators > * {
  cursor: pointer;
  padding: var(--underline-gap, 0.5rem) 0;
  /* removes any border that may exist before adding new borders
    ---useful for removing borders on the buttons */
  border: 0;
  border-bottom: 0.2rem solid hsl(var(--clr-white) / 0);
  background-color: transparent;
}

.underline-indicators > li:hover,
.underline-indicators > button:hover
/* .underline-indicators > a:hover, */
/* .underline-indicators > span:hover, */
/* .underline-indicators > span:focus, */
/* .underline-indicators > a:focus, */
/* .underline-indicators > button:focus,  */
/* .underline-indicators > li:focus  */ {
  border-bottom: 0.2rem solid hsl(var(--clr-white) / 0.5);
}

.underline-indicators > li.active,
.underline-indicators > [aria-selected="true"] {
  color: hsl(var(--clr-white) / 1);
  border-color: hsl(var(--clr-white) / 1);
}

@media (max-width: 35rem) {
  /*  * isn't working for all for some reason */
  .primary-navigation.underline-indicators > .active,
  .primary-navigation.underline-indicators > a,
  .primary-navigation.underline-indicators > ul,
  .primary-navigation.underline-indicators > li {
    border: 0;
  }
}

.tab-list {
  gap: 2rem;
}

.dot-indicators > * {
  cursor: pointer;
  border: 0;
  border-radius: 50%;
  aspect-ratio: 1;
  padding: 0.5em;
  background-color: hsl(var(--clr-white) / 0.25);
}

.dot-indicators > button:hover,
.dot-indicators > button:focus {
  background-color: hsl(var(--clr-white) / 0.5);
}

.dot-indicators > [aria-selected="true"] {
  background-color: hsl(var(--clr-white) / 1);
}

.number-indicators > * {
  cursor: pointer;
  border: 0;
  width: 4.5rem;
  border-radius: 50%;
  aspect-ratio: 1;
  /* padding: 2.5rem; */
  margin-left: 8rem;
  border: 1px solid hsl(var(--clr-white) / 0.25);
}

.number-indicators > button:hover,
.number-indicators > button:focus {
  border-color: hsl(var(--clr-white) / 1);
  background-color: hsl(var(--clr-dark));
  color: hsl(var(--clr-white) / 1);
}

.number-indicators > [aria-selected="true"] {
  background-color: hsl(var(--clr-white) / 1);
  color: hsl(var(--clr-dark));
}

/* ---------------------------- */
/*   Page specific backgrounds   */
/* ---------------------------- */

body {
  background-size: cover;
  background-position: bottom center;
}
/* home */
.home {
  background-image: url(./assets/home/background-home-mobile.jpg);
}

@media (min-width: 35rem) {
  .home {
    background-position: center center;
    background-image: url(./assets/home/background-home-tablet.jpg);
  }
}

@media (min-width: 45rem) {
  .home {
    background-image: url(./assets/home/background-home-desktop.jpg);
  }
}

/* destination */
.destination {
  background-image: url(./assets/destination/background-destination-mobile.jpg);
}

@media (min-width: 35rem) {
  .destination {
    background-position: center center;
    background-image: url(./assets/destination/background-destination-tablet.jpg);
  }
}

@media (min-width: 45rem) {
  .destination {
    background-image: url(./assets/destination/background-destination-desktop.jpg);
  }
}

/* crew */
.crew {
  background-image: url(./assets/home/background-crew-mobile.jpg);
}

@media (min-width: 35rem) {
  .crew {
    background-position: center center;
    background-image: url(./assets/crew/background-crew-tablet.jpg);
  }
}

@media (min-width: 45rem) {
  .crew {
    background-image: url(./assets/crew/background-crew-desktop.jpg);
  }
}

/* ---------------------------- */
/*          Layout             */
/* ---------------------------- */

.grid-container {
  text-align: center;
  display: grid;
  /* grid specific centering both top and bottom elements within their top and bottom space as well as horizontally
  place-content would do something similar but doesn't space the items apart vertically, so 
  you would use a row-gap w/ it to create space */
  place-items: center;
  /* padding-line adding padding horizontally (naturally, but can do vertical if it makes sense
  for the element) */
  padding-inline: 1rem;
  padding-bottom: 2.5rem;
}

/* only applying to p tags in the grid-container that do not have a class assocaited w/ them */
.grid-container p:not([class]) {
  /* max width of X characters -- roughly equivalent to the zero 0 character in width */
  max-width: 50ch;
}

.numbered-title {
  grid-area: title;
}
/* Destination Layout */

.grid-container--destination {
  --flow-space: 2rem;
  grid-template-areas:
    "title"
    "image"
    "tabs"
    "content";
}

.grid-container--destination > picture {
  grid-area: image;
  max-width: 60%;
  align-self: start;
}

.grid-container--destination > .tab-list {
  grid-area: tabs;
}

.grid-container--destination > .destination-info {
  grid-area: content;
}

.destination-meta {
  flex-direction: column;
  border-top: 1px solid hsl(var(--clr-white) / 0.1);
  padding-top: 2.5rem;
  margin-top: 2.5rem;
}

.destination-meta p {
  font-size: 1.75rem;
}

/* Crew Layout */

.grid-container--crew {
  padding-bottom: 0;
  grid-template-areas:
    "title"
    "image"
    "dots"
    "content";
}

.grid-container--crew > picture {
  padding-inline: clamp(5vw, 5rem, 5rem);
  grid-area: image;
  max-width: 80%;
  border-bottom: 1px solid hsl(var(--clr-white) / 0.1);
}

.grid-container--crew > .dot-indicators {
  grid-area: dots;
}

.grid-container--crew > .crew-details {
  grid-area: content;
}

.crew-details h2 {
  color: hsl(var(--clr-white) / 0.5);
}

@media (min-width: 35em) {
  .numbered-title {
    justify-self: start;
    margin-top: 2rem;
  }

  .destination-meta {
    flex-direction: row;
    justify-content: space-evenly;
  }
  .grid-container--crew {
    grid-template-areas:
      "title"
      "content"
      "dots"
      "image";
  }
  .grid-container--crew > picture {
    padding-inline: 0px;
  }
}
/* ... */

